js/src/tests/test262/language/statements/class/elements/syntax/early-errors/invalid-names/fields-init-heritage-member-expression-this.js
DONOTEVALUATE
(
)
;
class
Parent
{
#
x
=
42
;
}
class
C
extends
Parent
{
f
=
this
.
#
x
}
